# OzyTerminal

./: .gitignore  Cargo.toml  Ozyterminal.md  README.md
.github/: copilot-instructions.md
agent-node/: Cargo.toml
agent-node/src/: health.rs  main.rs  reverse_ssh.rs
app-client/: package-lock.json  package.json  tsconfig.json
app-client/scripts/: ensure-next-dev.mjs
app-client/src-tauri/: Cargo.toml  tauri.conf.json
app-client/src-tauri/capabilities/: default.json
app-client/src-tauri/src/: activity.rs  app_state.rs  lib.rs  main.rs
app-client/src-tauri/src/collab/: audit.rs  mod.rs  session_mirror.rs  shared_vault.rs  test_support.rs
app-client/src-tauri/src/commands/: collab.rs  control_plane.rs  filesystem.rs  history.rs  host.rs  import.rs  mod.rs  session.rs  storage.rs  vault.rs
app-client/src-tauri/src/core/: control_plane.rs  credential_import.rs  host_discovery.rs  mod.rs  pty.rs  recent_connections.rs  session_manager.rs  ssh_client.rs  zero_copy.rs
app-client/src-tauri/src/crypto/: envelope.rs  keys.rs  memory_guard.rs  mod.rs
app-client/src-tauri/src/tunnel/: mod.rs  relay_client.rs  reverse_tunnel.rs
app-client/src-ui/: README.md  index.html  next.config.mjs  package-lock.json  package.json  vite.config.ts  vitest.config.ts
control-plane/: Cargo.toml
control-plane/src/: main.rs
control-plane/src/audit/: mod.rs
control-plane/src/auth/: mod.rs
control-plane/src/ca/: mod.rs
control-plane/src/relay/: mod.rs
control-plane/src/synchronization/: mod.rs
docs/: README.md
docs/architecture/: Esquema_de_arbol.md  Ozyterminal.md  README.md
docs/operations/: CHECKLIST_OPERATIVO.md  README.md  (+1 more)
scripts/: demo-stack.ps1
(+62 files in other folders)
