[package]
name = "ozyterminal-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "ozyterminal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.50"
russh-sftp = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.8", features = ["serde"] }
tauri = { version = "2.10", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
axum = "0.8"
